--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,27 @@
 .App-link {
   color: #61dafb;
 }
-
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+.center{
+  text-align:center;
+  margin: auto;
+}
+.card{
+  width:400px;
+  border:1px solid #8080801c;
+}
+.img-width{
+  width:250px;
+  padding-bottom: 10px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
